--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 html {
   word-wrap: break-word;
   font-size:1.1rem;
-  font-family: times new roman, Droid Arabic Naskh, Noto Serif TC, Noto Serif SC, Noto Serif KR, Noto Serif JP, Eczar, Yagpo Tibetan Uni, Noto Sans Siddham, David Libre, Noto Serif Thai, Noto Serif Lao, Odor Mean Chey, Noto Serif Sinhala, Pyidaungsu, NotoSansEthiopic, Noto color emoji, serif;
+  font-family: times new roman, Droid Arabic Naskh, Noto Serif TC, Noto Serif SC, Noto Serif KR, Noto Serif JP, Eczar, Yagpo Tibetan Uni, Noto Sans Siddham, Noto Serif Armenian, David Libre, Noto Serif Thai, Noto Serif Lao, Odor Mean Chey, Noto Serif Sinhala, Pyidaungsu, NotoSansEthiopic, Noto color emoji, serif;
 }
 ::selection {background: #B5D6FC; color: #000;}
 img {
