--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 html {
   word-wrap: break-word;
   font-size:1.1rem;
-  font-family: times new roman, Noto Serif Georgian, Noto Serif Armenian, David Libre, Scheherazade, Noto Serif TC, Noto Serif SC, Noto Serif KR, Noto Serif JP, Eczar, Yagpo Tibetan Uni, Noto Sans Siddham, Noto Sans Soyombo, Noto Serif Thai, Noto Serif Lao, Battambang, Noto Serif Sinhala, Openbaybayin, Pyidaungsu, Noto Serif Ethiopic, Noto Sans Meetei Mayek, Noto color emoji, serif;
+  font-family: times new roman, Noto Serif Georgian, Noto Serif Armenian, David Libre, Scheherazade Bold, Noto Serif TC, Noto Serif SC, Noto Serif KR, Noto Serif JP, Eczar, Yagpo Tibetan Uni, Noto Sans Siddham, Noto Sans Soyombo, Noto Serif Thai, Noto Serif Lao, Battambang, Noto Serif Sinhala, Openbaybayin, Pyidaungsu, Noto Serif Ethiopic, Noto Sans Meetei Mayek, Noto color emoji, serif;
 }
 ::selection {background: #B5D6FC; color: #000;}
 img {
