--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Notepad</title>
 <meta charset="utf-8">
 <style>
-@import url(https://victorlee.github.io/fonts/stylesheet.css);
+@import url(/fonts/stylesheet.css);
 html {
   word-wrap: break-word;
   font-size:1.1rem;
@@ -111,7 +111,7 @@ padding: 0 5px;
 </table>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://victorlee.github.io/editable-marked/marked.min.js"></script>
+<script src="/editable-marked/marked.min.js"></script>
 <script>
 var container = document.getElementById('input');
 var anchor = document.getElementById('export');
